--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vasyankin-alexander-henchfiend.github.io/burger-project",
+  "homepage": "https://vasyankin-alexander-henchfiend.github.io/react-stellar-burger",
   "name": "react-burger-starter",
   "version": "0.1.0",
   "private": true,
